--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@docusaurus/core": "2.0.0-beta.18",
     "@docusaurus/preset-classic": "2.0.0-beta.18",
     "@mdx-js/react": "^1.6.22",
+    "@wojtekmaj/react-daterange-picker": "^3.4.0",
     "clsx": "^1.1.1",
+    "dayjs": "^1.11.2",
     "docusaurus-plugin-sass": "^0.2.2",
     "plugin-image-zoom": "github:flexanalytics/plugin-image-zoom",
     "polipop": "^1.0.0",
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sass": "^1.50.1"
+    "sass": "^1.50.1",
+    "unix-timestamp": "^1.0.2"
   },
   "browserslist": {
     "production": [
